src/test/compile-fail/static-assert2.rs
#[static_assert]
static e: bool = 1 == 2; //~ ERROR static assertion failed

fn main() {}
